--- a/EMIOrNot/AndroidManifest.xml
+++ b/EMIOrNot/AndroidManifest.xml
@@ -6,13 +6,12 @@
 
     <uses-sdk
         android:minSdkVersion="14"
-        android:targetSdkVersion="17" />
+        android:targetSdkVersion="19" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:label="@string/app_name" >
         <activity
             android:name="com.arav.emiornot.MainActivity"
             android:label="@string/app_name" >
